// Copyright 2021 The ChromiumOS Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

// DO NOT MODIFY THIS FILE. This file is automatically generated.
// See google3/chrome/cros/reporting/api/proto/synced/README.md
// Describes a user affiliated with a Chrome OS Session.

syntax = "proto2";

package reporting;

option optimize_for = LITE_RUNTIME;

// Common information about Session Affiliated User accounts.
message SessionAffiliatedUser {
  // Email address associated with the account.
  optional string user_email = 1;
}

message SessionUnaffiliatedUser {
  // String user id is deprecated because it was filled using a cryptographic
  // hash which generated a non-readable byte string. The ID must be human
  // readable since it's displayed in a UI.
  optional string user_id = 1 [
    deprecated = true
  ];

  // Unique per-device user id. Used to track unaffiliated user activity on a
  // given device without revealing the identity of the user.
  optional int64 user_id_num = 2
      ;
}
